Updates both mainnet and sepolia manifests

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -25810,6 +25810,41 @@
       "bloomSize": 917570,
       "indexHash": "QmZheSbv5axPG9RbZyK6tHr3GUcLMYpy3eBUMZZ7thciTT",
       "indexSize": 25147292
+    },
+    {
+      "range": "017333678-017336765",
+      "bloomHash": "QmdMNAYuNTB5659EQVUoDwBhc2HzBhHrTZje6QKg3vWHNy",
+      "bloomSize": 1048646,
+      "indexHash": "QmNW2AEPtDUZFUUrtHgYS8o9TFdCcLQTCzwo84vaWM8xG5",
+      "indexSize": 26048740
+    },
+    {
+      "range": "017336766-017339786",
+      "bloomHash": "QmcDytMcgY8a59Ts9iYG1U7Dic63aDMMvXywLY7nUzuCR4",
+      "bloomSize": 917570,
+      "indexHash": "QmR6fNRHVQnmQB7wsDeuBspTSf49Hb4kKiAR23MKszmfNo",
+      "indexSize": 24670484
+    },
+    {
+      "range": "017339787-017342927",
+      "bloomHash": "QmYFFqQdRVgwZZ3qWWnzud9uaDcAes6nsE2cmGJqzkkdhN",
+      "bloomSize": 1048646,
+      "indexHash": "QmXh4QsHtUue11H5rEzQtT7p3GYsCBwq3r5EjqgCLUjxfZ",
+      "indexSize": 26160788
+    },
+    {
+      "range": "017342928-017345950",
+      "bloomHash": "QmbpDr2ZG5vTAqd1XvG6AumCFVsN5SJHM7jQv2HfPcdWVB",
+      "bloomSize": 917570,
+      "indexHash": "QmeGtcfkthBvJAYBc7XevTt3Yp5i6epzS8m9WaUK8f6tv6",
+      "indexSize": 25016068
+    },
+    {
+      "range": "017345951-017349142",
+      "bloomHash": "QmfHrUJ9rtg18pXXyHtNSNsY6CFeanknbdHSX1d9eR7Bdv",
+      "bloomSize": 917570,
+      "indexHash": "QmW8f1x3RokoSS7isifBiWqMydH31FcZn3E6VqkLHQrTgG",
+      "indexSize": 25772140
     }
   ]
 }
