Updates both mainnet and sepolia manifests

--- a/src/other/install/per-chain/sepolia/manifest.json
+++ b/src/other/install/per-chain/sepolia/manifest.json
@@ -1964,102 +1964,109 @@
       "indexSize": 2454500
     },
     {
-      "range": "003361188-003364583",
-      "bloomHash": "QmcttX2dQoJ3GNFXwZWJyUHd4B69fM8D98frQESz1MkcmY",
+      "range": "003357795-003361017",
+      "bloomHash": "QmYkoqUWGWX66CDeZyk3aaMPwwwGiBqBHje6hytGAt4nzA",
       "bloomSize": 131114,
-      "indexHash": "Qma5prBDRR8poQrH5ppaVxoS551gL8woBbCGBdZnHKz5Xz",
-      "indexSize": 2156360
+      "indexHash": "QmUcYY7fgjN84rZvSxVZxvpcpamTad1CMdwXVamq35jr1S",
+      "indexSize": 2452024
     },
     {
-      "range": "003364584-003368003",
-      "bloomHash": "QmZrK1C8wGj8pSNEJio774Ah15ZGx8nP31FdwYs7NWSa7f",
+      "range": "003361018-003364503",
+      "bloomHash": "QmUTMbgc2kjwhvKYsbE9HngchFkGLjjpH6R97QYeeXCHWZ",
       "bloomSize": 131114,
-      "indexHash": "QmVKU45RYAhkq3wf1eb37TtmgMBziTMGdBof7YmXEFHnyP",
-      "indexSize": 2364500
+      "indexHash": "QmaDbmVpHwgyQWnLbGJpdEZaPMJ7QGJnYk6X9m2Vg5MnQB",
+      "indexSize": 2155472
     },
     {
-      "range": "003368004-003370702",
-      "bloomHash": "QmcCUYBKViZRJyRWWEPY9T7jibA86eZtPx5P8PY9cGMerS",
+      "range": "003364504-003367868",
+      "bloomHash": "QmS1KbYacdYAReP5GB5bVGHULXJSFP52LrP6tcWAfSgaeQ",
       "bloomSize": 131114,
-      "indexHash": "QmahGXYXNAw1tLd5YGvjGUeE11e3XKxVfCHkajyiz8KEQP",
-      "indexSize": 2401968
+      "indexHash": "Qmf4wKDF7G9UQjmyj5jrH8wEdC96rLyJmHCFwSGLYuMvMv",
+      "indexSize": 2357632
     },
     {
-      "range": "003370703-003373257",
-      "bloomHash": "QmUatFah2Tnc7Sv5ukrGkadKpc1G781ZQ8upWBgtjERjrk",
+      "range": "003367869-003370636",
+      "bloomHash": "QmfCtbanGHKuhCFSwamF8ViPV8FBJnRzB4YgJSSWMY6ey1",
       "bloomSize": 131114,
-      "indexHash": "QmXkCN8SdqxE4bxvr4Sb6nQkHBhuZWCyCxoFuhUcA8mEPS",
-      "indexSize": 2520708
+      "indexHash": "QmUYTmBD39iLtH9oaqCYpp1HuyWPcG431Jtz4x48ymvBsf",
+      "indexSize": 2408864
     },
     {
-      "range": "003373258-003376441",
-      "bloomHash": "QmY9MVDWZ6sq3ncxR9XZesR73A7HbxkLBLzUphkpjc74cT",
+      "range": "003370637-003373186",
+      "bloomHash": "QmZprBDQzSBLTuZvhoReMKzywohfvCjXMWnNkaNZ51aaSA",
       "bloomSize": 131114,
-      "indexHash": "QmQgtmkaV3HMs2tewbmjKAC8Uh6hCTUTrApD5sYJx5cuDE",
-      "indexSize": 2307460
+      "indexHash": "QmWove8WWZ3TZ2VDvpFdoTetaVDB9MQ2u9KUmih9vPqkLv",
+      "indexSize": 2524160
     },
     {
-      "range": "003376442-003378559",
-      "bloomHash": "QmbJNSm9T5e4N5xLWkqJfeB7DyFQenjaVCjpWuLiFV8ck3",
+      "range": "003373187-003376352",
+      "bloomHash": "QmXKKRe3rZHoXQ2tHiYBBZtwPZf1vJ5q28eXmEGW8AqCs3",
       "bloomSize": 131114,
-      "indexHash": "QmUSg1TuEk87rM53uaikS9JVddGEZSoj6qcveTLxR6kYMX",
-      "indexSize": 2437564
+      "indexHash": "QmatZwy5J3mXqCJ1EKXkNwyykEuEmox65YAioyrt8BYemS",
+      "indexSize": 2297760
     },
     {
-      "range": "003378560-003380819",
-      "bloomHash": "QmPfAwpAEiQxeqpvjkZvrd7L2tGGuUTWKvmRvj3K1y7YU8",
+      "range": "003376353-003378475",
+      "bloomHash": "QmRAbYBgbhRx8nP2ogMjr7QKntMHqoDMP6akBmzMioQyCt",
       "bloomSize": 131114,
-      "indexHash": "QmcRvr55APzg2M8bXWLiWQW6zxEkuyYadSLd8d3Z21Q3v3",
-      "indexSize": 2278448
+      "indexHash": "QmPJk9wMB3EcTYCetxQSyFuxqmA486NzUSYYbhDSjUNG66",
+      "indexSize": 2443356
     },
     {
-      "range": "003380820-003384195",
-      "bloomHash": "QmdK3c2APcUx8sbbsJQn5LVorCeqxoJVgGZ5kD59A73QwG",
+      "range": "003378476-003380714",
+      "bloomHash": "QmZCTGWrCSGK5msw8C8FqdF4QP26X7tq5MMnuMEg89J5pW",
       "bloomSize": 131114,
-      "indexHash": "QmckjJJoBLnhepkSLooxhb3UEqFH7hZXHpAf8NEyRbzHP5",
-      "indexSize": 2255904
+      "indexHash": "QmdqtGNBcYXG2bjmwUR4m2MXnwcdBxbUi8hG8xHHgXik15",
+      "indexSize": 2281596
     },
     {
-      "range": "003384196-003386794",
-      "bloomHash": "QmNxwoAuPLSkVZMGzCSp3N57TW9kr1CZ53vuKci3vWAKL3",
+      "range": "003380715-003384123",
+      "bloomHash": "QmTpM1Fx2o995FysPTipnHv92LxC4xyoMuyYfxtHELjXpc",
       "bloomSize": 131114,
-      "indexHash": "QmayUNaHhXqgwbkWuDH5qhUMFFrzSzp3dE6zxV2SX64QpR",
-      "indexSize": 2251116
+      "indexHash": "QmSb4mWpzL6jQve8RHAQk3nh5ECWBZUnThCeDF6tHvPvkW",
+      "indexSize": 2257288
     },
     {
-      "range": "003386795-003389856",
-      "bloomHash": "QmW5eMoLnabtE9UN9dVpHWkHGjkbZYyihmXkWVXcADpUWr",
+      "range": "003384124-003386712",
+      "bloomHash": "Qma3MaG4zLm35BKmqnhQq8ZBterVGTHmbfuuiuNiJbm1yr",
       "bloomSize": 131114,
-      "indexHash": "QmPJyzcNVpNyVW4n6Nu4A4oEgX4pmPuTF9VnqU4BERiLaE",
-      "indexSize": 2237856
+      "indexHash": "QmSbBBq9echn6dktdomFMLPcJgFq7qBodiaxMyDFfYaQPJ",
+      "indexSize": 2249836
     },
     {
-      "range": "003389857-003392681",
-      "bloomHash": "QmSN9YD3GBRLytEtt4ryRrdrpMcHKByEbTd5XiXno8FmMy",
+      "range": "003386713-003389775",
+      "bloomHash": "QmP2zUH7jj8JMiWgiCCL27iUjevD2YRRtcNGz5wyNiKH2n",
       "bloomSize": 131114,
-      "indexHash": "QmSURgVswetX7mD1whxDeyJEwtcB8mSDDbM7AVqVzG9Vg8",
-      "indexSize": 2352056
+      "indexHash": "QmNnf6FVcn7stunD3UpbzndZiV8sKGEgB7avh4594grJ31",
+      "indexSize": 2237972
     },
     {
-      "range": "003392682-003395988",
-      "bloomHash": "QmS2xqKAcZRNkEeiNjanEDFBpHXVnGYM9LXofocBN28FiF",
+      "range": "003389776-003392586",
+      "bloomHash": "QmSZSLScUmsNUyjjVuNXg1NyVpJSTFXk6ZqkD8YJ7n5o5W",
       "bloomSize": 131114,
-      "indexHash": "QmTZRGrmpKKxeeSFw6ULY8e7MeiVUciRLUJ1aQ9EuZ1WT5",
-      "indexSize": 2284584
+      "indexHash": "QmSBnPWNLMBM5Qfvv6qbwRRVK8xrw9BGPx3Pz3ehctVj9p",
+      "indexSize": 2349584
     },
     {
-      "range": "003395989-003399014",
-      "bloomHash": "QmV3B74TAiHr4xTGDaakaft7tBZ9u7iyFNHagckcnqMNA1",
+      "range": "003392587-003395896",
+      "bloomHash": "QmTG7sUfxE8gk7cUoQ5LSc77SDuqEK51tjNYxTd6RBXTdY",
       "bloomSize": 131114,
-      "indexHash": "Qmf1Asaf9mKE2LyafJk5YwoRERMKTAyaVc8wMQdvfyQLG7",
-      "indexSize": 2280964
+      "indexHash": "QmVNyQa3LYR3jZzNtDfsRdBtjNhVCkQ4eaT9jMsSR4fbJB",
+      "indexSize": 2289560
     },
     {
-      "range": "003399015-003400000",
-      "bloomHash": "Qmavk8LPey5PPfy4Zt6Hc4fTRDvqqikUEaLrpg4h7FABQX",
+      "range": "003395897-003398928",
+      "bloomHash": "QmVKco82ADGAh3CbhC5KjjAWebi7cs3sLj27vKrSjiejMM",
       "bloomSize": 131114,
-      "indexHash": "QmYLAEAHFBcm9Gzy5qheLWQUMFXTMx1bLiLdL9JEDw3WGM",
-      "indexSize": 667856
+      "indexHash": "QmVKyKyenWcuckCiPvVb2snwV6Y3qg6Yzw8NkEA8dww4o7",
+      "indexSize": 2280264
+    },
+    {
+      "range": "003398929-003400000",
+      "bloomHash": "QmXuf6SdcAM4DkWSs1yv9SQuPGwXLjgeCqq1W2KZXMhF3t",
+      "bloomSize": 131114,
+      "indexHash": "QmcLYBor9dL3fC9qJSo6jVuYfnQx6VHxwM5Pefujtr72Ey",
+      "indexSize": 729968
     },
     {
       "range": "003400001-003403051",
