Updates sepolia's manifest for testing

--- a/src/other/install/per-chain/sepolia/manifest.json
+++ b/src/other/install/per-chain/sepolia/manifest.json
@@ -2802,6 +2802,328 @@
       "bloomSize": 131114,
       "indexHash": "QmPxKkVRauQ1a9SXHMBSvcVB18wSqY7ossGmjP74y78j7S",
       "indexSize": 2252188
+    },
+    {
+      "range": "003569241-003573653",
+      "bloomHash": "QmctSGsdjwYDd7jK92DinGAbpS5cTr9ccPhEmZoY68t1Jg",
+      "bloomSize": 131114,
+      "indexHash": "QmZWRFAWuKBTsTBHvguZe7ukDGwD7ADhFi8L25gXEs7kTd",
+      "indexSize": 2148600
+    },
+    {
+      "range": "003573654-003575732",
+      "bloomHash": "QmXuueCj64aswTZSYKGW2q9VxdEucHoH2zwSLzEkW9b6yp",
+      "bloomSize": 131114,
+      "indexHash": "QmVpMassW92cU9A2GaLM1htB5rAthD4VsWgYKNsXNyutY5",
+      "indexSize": 2158248
+    },
+    {
+      "range": "003575733-003577467",
+      "bloomHash": "Qmddb2byM4nSnHeYAnFSyBn6K1UFjcvZ9gErdYC1jJ3ekr",
+      "bloomSize": 131114,
+      "indexHash": "QmUW4HnTqDMvpiHWf21EXct935mLUUf5nAgTXssN369XBi",
+      "indexSize": 2298780
+    },
+    {
+      "range": "003577468-003579993",
+      "bloomHash": "QmUJCQTvCiKo97dKbNW1r9dwj8EX8Rsojn2X2AQ9UFWbFi",
+      "bloomSize": 131114,
+      "indexHash": "QmUS2A9fHFripn7YXqdhwB1zq5rmz4jKQcfTqjRNTPGDvS",
+      "indexSize": 2201952
+    },
+    {
+      "range": "003579994-003581980",
+      "bloomHash": "QmbHybCuwNwzc8t537x5nAYDr5PM3LCKENemhz5j22jZcR",
+      "bloomSize": 131114,
+      "indexHash": "QmXcA6jhRTmWAqmcWaz6aH7QpHi8EUPbU9L6f3HmqwhsEB",
+      "indexSize": 2204508
+    },
+    {
+      "range": "003581981-003583749",
+      "bloomHash": "QmQGVNEEsGrePgf5b6kjQkb5Yhdr2gmVKaa9pKBTcvdoZS",
+      "bloomSize": 131114,
+      "indexHash": "QmaikwgbvvBUxhVoGqXJ5rYQJextWtquqQBG5fof1ZFse8",
+      "indexSize": 2467232
+    },
+    {
+      "range": "003583750-003586984",
+      "bloomHash": "Qmae5yaQ5eywbFdNheyCUF6NdFCJzjSqAbGDaxG9tmc7rP",
+      "bloomSize": 131114,
+      "indexHash": "Qmf7wG1uEUKPt5G3HY79MW3Bk6Bnq367XpdNkidj1iXVGJ",
+      "indexSize": 2327056
+    },
+    {
+      "range": "003586985-003588778",
+      "bloomHash": "QmPyniDtD9RqdjhXGPhxZmHiCYcoMaoWuq23ioXBjGgcss",
+      "bloomSize": 131114,
+      "indexHash": "QmWBMk7QQg8hLUZmEhEMWbGemGbRGWypWjV7JR8WwFddnp",
+      "indexSize": 2178296
+    },
+    {
+      "range": "003588779-003590603",
+      "bloomHash": "QmSJ9Tsvio3waRy6MRg4JsyPe8WbDj3Wufib7jRt46gya2",
+      "bloomSize": 131114,
+      "indexHash": "QmfE7iSGRzhbLk3qjLdae1muhsocKAf3ngEGH1QASKfsmE",
+      "indexSize": 2408292
+    },
+    {
+      "range": "003590604-003592698",
+      "bloomHash": "QmXiHpS2mAGJvBmqtBJgqZbjZkp4FUxS1yWuYp9VfSBws1",
+      "bloomSize": 131114,
+      "indexHash": "QmPdQB5zhnHo2DzriKdzyVtF2M9ycLP3XSG1n6PHDgN3dA",
+      "indexSize": 2253664
+    },
+    {
+      "range": "003592699-003594713",
+      "bloomHash": "QmYDMLxWBWtQvtYQjNXPA3nmJYe8pfwjGfvV1hNcAUYNQs",
+      "bloomSize": 131114,
+      "indexHash": "QmYwPXpnzZN1ChXpNCne7Cu22X8LY6CB3FVsgfBo85fye2",
+      "indexSize": 2280144
+    },
+    {
+      "range": "003594714-003596285",
+      "bloomHash": "QmXLZQFQv1Ag3pcDyNRZf524oRtbueU4jvyE3GzMD6ytoL",
+      "bloomSize": 131114,
+      "indexHash": "QmNjABaqTeT3byY71wq8q5EPjeYoGpUKbECMs9gWocb4Rs",
+      "indexSize": 2375788
+    },
+    {
+      "range": "003596286-003598212",
+      "bloomHash": "QmYQWcvg3MSqDWTuaVRibY1XVw4PogGGy7qwm6n5SNpScq",
+      "bloomSize": 131114,
+      "indexHash": "Qmf5kSJD6E3Etw68iosmU1xA2L58R8QCsF75UN5SgBAVCj",
+      "indexSize": 2288648
+    },
+    {
+      "range": "003598213-003600000",
+      "bloomHash": "QmcZbuFua3pAY2BssN4yxH5wAC7pNS9Txw2zTZcrxSihG5",
+      "bloomSize": 131114,
+      "indexHash": "QmTbiVCkF3oET6z1nwF648BAHAE3upYTgJkaaooFqsiGhj",
+      "indexSize": 1959536
+    },
+    {
+      "range": "003600001-003601632",
+      "bloomHash": "QmQSMYaDC8wtmoFqfi5hEd829bVCFpuF2T9cqn647DVgMT",
+      "bloomSize": 131114,
+      "indexHash": "QmRkuamvMntnz6NBxL75F2ah6r6QjDfZfd4sDQFRMfn3nv",
+      "indexSize": 2233404
+    },
+    {
+      "range": "003601633-003603282",
+      "bloomHash": "QmXECcq9tchjKY4ypQRNzMg1nWSuT4yqdinJCgX9QLkkWV",
+      "bloomSize": 131114,
+      "indexHash": "QmbwJCWakLN1T7wm5c7GhecrnsHetrAybPU2Bz7PZ3Mmho",
+      "indexSize": 2213528
+    },
+    {
+      "range": "003603283-003605164",
+      "bloomHash": "QmRL1nwC6oLUKApuvq8ZLPVjS7G4KHe2fjvXTDXJ2mWb1E",
+      "bloomSize": 131114,
+      "indexHash": "QmYWC4D6fp23SsjJTFsheAxkYDF2B6QXFxwx3raxNondCL",
+      "indexSize": 2350568
+    },
+    {
+      "range": "003605165-003607325",
+      "bloomHash": "QmRKrTzm5v7sp8uBYGgddjRosbRXay35CFazm32rjbiBz5",
+      "bloomSize": 131114,
+      "indexHash": "QmZtsNaAqoMZZQxUtVgqqkZRqSdeKBMeAHmEHHq8bNcFsX",
+      "indexSize": 2271680
+    },
+    {
+      "range": "003607326-003608677",
+      "bloomHash": "QmRzovZ4Yu3zDtqcbbRaXC5Qr37W18gW65xg9Zze1uMk62",
+      "bloomSize": 131114,
+      "indexHash": "QmWEqonTkSwZ3iXvG2tbHTF6bD1vEyMEYoKHfPcZsxdKUM",
+      "indexSize": 2647708
+    },
+    {
+      "range": "003608678-003610149",
+      "bloomHash": "QmedK3SeNxTxPRw1BANidwrKgxNANDR8JcU4SPEFtg5Bud",
+      "bloomSize": 131114,
+      "indexHash": "QmewXQZK2CV4mGx9jVnsUr7FgFLKuCyCMx6NpxEn3eUu7B",
+      "indexSize": 2211272
+    },
+    {
+      "range": "003610150-003612221",
+      "bloomHash": "QmRDR4Q4hEwdXCukqopGKHLD1p73oT8obGUPSmjpMwPTSk",
+      "bloomSize": 131114,
+      "indexHash": "QmPicUJKaNE1Lt35stVsH2TLa2JC15pkgJyHU5wTvWUGMp",
+      "indexSize": 2309632
+    },
+    {
+      "range": "003612222-003614163",
+      "bloomHash": "QmPFcELNioQ9vrbHfFnyC34Yqkxgkh2Cd2aVC7toTv5pPk",
+      "bloomSize": 131114,
+      "indexHash": "QmNcpz9SqcMB7t9yFUxG5XG4gEbPCN1vrkd13nzzxAW21X",
+      "indexSize": 2300220
+    },
+    {
+      "range": "003614164-003615678",
+      "bloomHash": "QmeqZbn8L8DPSvurCTHnQ3WzQeNtrXepE63pYDWDKR8tJf",
+      "bloomSize": 131114,
+      "indexHash": "Qmccq4cPptKNGMtww8LfcyruWBZsyEp3JxtJ2Emiz8Nq9u",
+      "indexSize": 2283788
+    },
+    {
+      "range": "003615679-003617673",
+      "bloomHash": "QmZm2oZ4B8uzgj3Aw5fSLQHNkPmatfuSumZfK3BzWDUMVd",
+      "bloomSize": 131114,
+      "indexHash": "QmQMbXAqUpqjByhHxevRXyY1GfVLp4DuMCbsZHooRSEXxN",
+      "indexSize": 2136672
+    },
+    {
+      "range": "003617674-003619931",
+      "bloomHash": "QmUsBP2JEgoJBZ42VRKJMFfbJoJerUh7urR3k99iSRG1tJ",
+      "bloomSize": 131114,
+      "indexHash": "QmNtUeRLmnXo9ojEyA5LG6hetQzuq57wEB9hsuwnyr1M34",
+      "indexSize": 2186212
+    },
+    {
+      "range": "003619932-003621393",
+      "bloomHash": "QmcyTfJRy4UmY8wydm9aspbrgu7rr8jpBwJqncHpqtx95T",
+      "bloomSize": 131114,
+      "indexHash": "QmfMd85cSWBNFhqUWStBd13EoNNf1UBSrxw859PXAiZkP9",
+      "indexSize": 2110452
+    },
+    {
+      "range": "003621394-003623021",
+      "bloomHash": "QmTTWmhyyFFg27sHJp6ctV5wReE8dKfqjfm17BoqyxpjMa",
+      "bloomSize": 131114,
+      "indexHash": "QmPEydh4sR2rhL2eN1uZa2k7hAoE1hSEffBLHwk9CFgyvt",
+      "indexSize": 2205840
+    },
+    {
+      "range": "003623022-003625053",
+      "bloomHash": "QmcLERJTNfU3VJzvyVfj85KHkmcC58rusQBew8DPDfGM4g",
+      "bloomSize": 131114,
+      "indexHash": "QmTv7vA6htyw5R6AEe3ApMwd3tpntdrxiHsuEcYbmP98Bx",
+      "indexSize": 2125640
+    },
+    {
+      "range": "003625054-003627229",
+      "bloomHash": "QmeJaFK9SuYHKD8E7z5iPSVVhe77jR7Jy9qZJZqpoa7SyB",
+      "bloomSize": 131114,
+      "indexHash": "QmZ8bZhriDPK5sXDQZkyUQ6GzKsVzkBDtPf82Eq9dEwsos",
+      "indexSize": 2028132
+    },
+    {
+      "range": "003627230-003628359",
+      "bloomHash": "QmVTWyJrBkwcYTCUZ8z2S9dRM2BLy3MS1CDYnnBB2EBBG9",
+      "bloomSize": 131114,
+      "indexHash": "QmW5vGpshGcZyorsdboXLWFRta4hqtNt35jwazUBcLtQuM",
+      "indexSize": 2101156
+    },
+    {
+      "range": "003628360-003629025",
+      "bloomHash": "QmTNh9eHSroXj1crQJtGr1ubK7e4aUU3QFzLFPYW1nMQBq",
+      "bloomSize": 131114,
+      "indexHash": "QmWRZQhq9CL4AaqFXx5PHVMVeFxCaWpbLEfu8JVSCqpZHB",
+      "indexSize": 2125096
+    },
+    {
+      "range": "003629026-003629669",
+      "bloomHash": "QmbvZEAa6qjn2qYqp2By4K25XyznWqDWSqnsUPTM6KUN9M",
+      "bloomSize": 131114,
+      "indexHash": "QmS2CnqNXpTaRjVRPrn3vAD6PJznRKVSWZRonMBpUwLn7u",
+      "indexSize": 2065864
+    },
+    {
+      "range": "003629670-003630684",
+      "bloomHash": "QmbrSMNL2PY4XVJUNVdaZu8mndudcjNPPsUsD6WRaF474p",
+      "bloomSize": 131114,
+      "indexHash": "QmVoMqNPtXN6Qn3EyuwmXUk7NCRZ64SNDmCHFrn1FuXQ4b",
+      "indexSize": 2012704
+    },
+    {
+      "range": "003630685-003632259",
+      "bloomHash": "QmdqmZ7THaveL5ZZTxXJYv84tG37vDaAR4ZfmLdBvDyP9P",
+      "bloomSize": 131114,
+      "indexHash": "QmZEJ3JiSKaY2Pb1JK6TbDgfS1Z2bjL28HBf6q3nuUDswo",
+      "indexSize": 1982236
+    },
+    {
+      "range": "003632260-003633424",
+      "bloomHash": "QmS8YsQKZaB8anV8idQiBaSqjcYSShZ7M2QMRoafobh2eX",
+      "bloomSize": 131114,
+      "indexHash": "QmWabXyahuqCwnh3KcB8fp8bjEzk2t6vCN2sHQXDZ46nfN",
+      "indexSize": 2004076
+    },
+    {
+      "range": "003633425-003634282",
+      "bloomHash": "QmbmK5DFSeoFukBeyT7XJ9ivcXkTLfu7GcGMGHKbUjL2s1",
+      "bloomSize": 131114,
+      "indexHash": "QmVUc3g84raGP4BneV79g1uyrE6yGVj24PENkqzVczkYRH",
+      "indexSize": 2052156
+    },
+    {
+      "range": "003634283-003635260",
+      "bloomHash": "QmZvGW3w23AcxPbDJfRsgFraxNkJWVhTqdmhfeg6rqJwbm",
+      "bloomSize": 131114,
+      "indexHash": "QmQfGyyStsnHTrHhSqme1e6xWn6pKm73w379HPbci92HTx",
+      "indexSize": 2090812
+    },
+    {
+      "range": "003635261-003636196",
+      "bloomHash": "QmQm6rbsjREfc49APFuzQk9RM8tnqRDpM6nZ5oPgDfPsPV",
+      "bloomSize": 131114,
+      "indexHash": "QmaWTiNFqsf4X9xsiD8nBzz73HSQ2LqKcmvNLfwvGDikwY",
+      "indexSize": 2084352
+    },
+    {
+      "range": "003636197-003637465",
+      "bloomHash": "QmcaYv4DrDNjrdPtdDeB8bUXbZVPsA8Tmo7HXkUEo231oc",
+      "bloomSize": 131114,
+      "indexHash": "QmbvZduH5vnpSrNF4eiwuABMRiXq8m6qEAhXH7khQ3a2Ni",
+      "indexSize": 2064572
+    },
+    {
+      "range": "003637466-003639228",
+      "bloomHash": "QmX2egCXcLFKGkMEMmoCZqHb88cbZoSUj51347BMKGi8W8",
+      "bloomSize": 131114,
+      "indexHash": "QmcGonutVJRXa1Y2aCfub9TyUKi49k9cg9DyiSkUmAe82s",
+      "indexSize": 2066076
+    },
+    {
+      "range": "003639229-003640424",
+      "bloomHash": "QmZXjbazxZTw1Pxqtt7tvQQ22UQ43RKNXv3vLSpk9bJu5x",
+      "bloomSize": 131114,
+      "indexHash": "QmZXqrDtcrJkfnfh9SvJG6aiUftf3xuH3E6XSbZDjnGoz3",
+      "indexSize": 2256824
+    },
+    {
+      "range": "003640425-003641366",
+      "bloomHash": "QmQn1puVAcFGEG6xjRhSJcrKpiKodK16HKiwfvE1DhbTfb",
+      "bloomSize": 131114,
+      "indexHash": "QmRrgD4Hn94aJjZHphinopVgMtEuvq5HKFVtwcJkWFa9Ss",
+      "indexSize": 2204192
+    },
+    {
+      "range": "003641367-003642159",
+      "bloomHash": "QmesVhk4tGJzsTfrLwKsQ3ZwaiM2Gequng9obM6VFc4kbv",
+      "bloomSize": 131114,
+      "indexHash": "QmPJXp4bpc2HrzvgK14ibYptLEPKYqCgiQHDYW8kBuhaJ2",
+      "indexSize": 2269788
+    },
+    {
+      "range": "003642160-003642725",
+      "bloomHash": "Qmdzf7JRvGGCpDnLnUwRkM2JYxK58EueV48MFw1HTBahmC",
+      "bloomSize": 131114,
+      "indexHash": "QmNp4xN6A6f8eebzHsciWS7y2ieZRfteVsYZGKDZLFLWGi",
+      "indexSize": 2232500
+    },
+    {
+      "range": "003642726-003643242",
+      "bloomHash": "QmWCFkoDNCw4jFdtJaCiZ3BDX8LNFvzB2r2nkcU1imy3oP",
+      "bloomSize": 131114,
+      "indexHash": "QmSXvZEHKVRh1BzWjXLNbFRnXNPf45kwdMwLsRbK7w3ysK",
+      "indexSize": 2601596
+    },
+    {
+      "range": "003643243-003643942",
+      "bloomHash": "QmcCPcqXhdhsTtWxLyxSDWz3ezM7GkvB7zoRN4jGgvQgRx",
+      "bloomSize": 131114,
+      "indexHash": "QmUU89jWAQeHZwNFm9oXNSBzkK9saYnHZYoqPUMjxMtK7y",
+      "indexSize": 2309280
     }
   ]
 }
