Updates sepolia's manifest for testing

--- a/src/other/install/per-chain/sepolia/manifest.json
+++ b/src/other/install/per-chain/sepolia/manifest.json
@@ -14,7 +14,7 @@
       "range": "000000000-000000000",
       "bloomHash": "QmPo7hSeeMNgr2nUjb5M1J4qhh3dPtbtWMTaVGPptyD3P5",
       "bloomSize": 131114,
-      "indexHash": "QmYi9B2tZF78rDHRQv9epvqvUiBpQF7UbzefeMMaFsvfsJ",
+      "indexHash": "QmYmotn7WLbyS5D3C48kpsU4oDg2NBLEDu8ki32UzPibiV",
       "indexSize": 584
     },
     {
@@ -2804,102 +2804,109 @@
       "indexSize": 2252188
     },
     {
-      "range": "003569241-003573653",
-      "bloomHash": "QmctSGsdjwYDd7jK92DinGAbpS5cTr9ccPhEmZoY68t1Jg",
+      "range": "003569241-003571131",
+      "bloomHash": "QmTKmsw4ETrUrszTo7JvNPiwL3eZASYm9YGvvzBG4z4Ldm",
       "bloomSize": 131114,
-      "indexHash": "QmZWRFAWuKBTsTBHvguZe7ukDGwD7ADhFi8L25gXEs7kTd",
-      "indexSize": 2148600
+      "indexHash": "QmQ6apQfWiSf2He5kM1pp796qDJL8VCfXdJkFmuEdfjxqv",
+      "indexSize": 2469704
     },
     {
-      "range": "003573654-003575732",
-      "bloomHash": "QmXuueCj64aswTZSYKGW2q9VxdEucHoH2zwSLzEkW9b6yp",
+      "range": "003571132-003574011",
+      "bloomHash": "QmPQosttbjNzdEMNGd6KKMbTiJGfwjqbhX3vy9o46dY4gV",
       "bloomSize": 131114,
-      "indexHash": "QmVpMassW92cU9A2GaLM1htB5rAthD4VsWgYKNsXNyutY5",
-      "indexSize": 2158248
+      "indexHash": "QmaFhgANqosB3mmW9hiYwN2Q3xRddoJWPx46BzFJnqMF1M",
+      "indexSize": 2127548
     },
     {
-      "range": "003575733-003577467",
-      "bloomHash": "Qmddb2byM4nSnHeYAnFSyBn6K1UFjcvZ9gErdYC1jJ3ekr",
+      "range": "003574012-003575928",
+      "bloomHash": "QmeW5VYQQJmLrvvDojpsNuZ4Jpo5wfpPRdxfdnU2smh8SU",
       "bloomSize": 131114,
-      "indexHash": "QmUW4HnTqDMvpiHWf21EXct935mLUUf5nAgTXssN369XBi",
-      "indexSize": 2298780
+      "indexHash": "QmY8ijgX8WWEgD11R9AsgJ4NLk4p7JAtotg8ZLTj1TikV4",
+      "indexSize": 2181436
     },
     {
-      "range": "003577468-003579993",
-      "bloomHash": "QmUJCQTvCiKo97dKbNW1r9dwj8EX8Rsojn2X2AQ9UFWbFi",
+      "range": "003575929-003577692",
+      "bloomHash": "QmcWyBpYYNF8is42LUu7bgTJxNrhSXgSTbuWAGKhree6Yr",
       "bloomSize": 131114,
-      "indexHash": "QmUS2A9fHFripn7YXqdhwB1zq5rmz4jKQcfTqjRNTPGDvS",
-      "indexSize": 2201952
+      "indexHash": "QmYmK9WjwqgAiiQMhohxN5PN2aKCjUPbDBEr3d9MCmRkCd",
+      "indexSize": 2316380
     },
     {
-      "range": "003579994-003581980",
-      "bloomHash": "QmbHybCuwNwzc8t537x5nAYDr5PM3LCKENemhz5j22jZcR",
+      "range": "003577693-003580272",
+      "bloomHash": "QmZ2TzzxPNHh6TJejTTieNjuuHiWgLwgmqe1CYzjENkyij",
       "bloomSize": 131114,
-      "indexHash": "QmXcA6jhRTmWAqmcWaz6aH7QpHi8EUPbU9L6f3HmqwhsEB",
-      "indexSize": 2204508
+      "indexHash": "QmQxLQqBQ7e5gjkLzhH8GibdAjk7p8fkMryNvvY5GcEboz",
+      "indexSize": 2167312
     },
     {
-      "range": "003581981-003583749",
-      "bloomHash": "QmQGVNEEsGrePgf5b6kjQkb5Yhdr2gmVKaa9pKBTcvdoZS",
+      "range": "003580273-003582217",
+      "bloomHash": "Qmb3qGjHNhrcfsc6W5Zr2xFcGPmgvNuqcAzAyN4KKLRETk",
       "bloomSize": 131114,
-      "indexHash": "QmaikwgbvvBUxhVoGqXJ5rYQJextWtquqQBG5fof1ZFse8",
-      "indexSize": 2467232
+      "indexHash": "QmccNAm975PR6RKo1wc3SJhtbqna2Vt96aq644LsfSQbuc",
+      "indexSize": 2224368
     },
     {
-      "range": "003583750-003586984",
-      "bloomHash": "Qmae5yaQ5eywbFdNheyCUF6NdFCJzjSqAbGDaxG9tmc7rP",
+      "range": "003582218-003583995",
+      "bloomHash": "QmdkGjtNWGbarxGSs1FBwqU9ZDmy3wFSk69CsXm1gVnYMh",
       "bloomSize": 131114,
-      "indexHash": "Qmf7wG1uEUKPt5G3HY79MW3Bk6Bnq367XpdNkidj1iXVGJ",
-      "indexSize": 2327056
+      "indexHash": "QmXiJhMeUfm1Q6kTEMura31sDANWiKDa3S69KTwnhdeNok",
+      "indexSize": 2460420
     },
     {
-      "range": "003586985-003588778",
-      "bloomHash": "QmPyniDtD9RqdjhXGPhxZmHiCYcoMaoWuq23ioXBjGgcss",
+      "range": "003583996-003587281",
+      "bloomHash": "Qmbj8LwcacpaNbyxMLiM7Wbnb2NyExRwaa8zFZLNLjPV4c",
       "bloomSize": 131114,
-      "indexHash": "QmWBMk7QQg8hLUZmEhEMWbGemGbRGWypWjV7JR8WwFddnp",
-      "indexSize": 2178296
+      "indexHash": "QmdWZmBd1LbzgKbFk8CHu9fMxzBfL84ZPnUyMM1zMDpyc2",
+      "indexSize": 2329264
     },
     {
-      "range": "003588779-003590603",
-      "bloomHash": "QmSJ9Tsvio3waRy6MRg4JsyPe8WbDj3Wufib7jRt46gya2",
+      "range": "003587282-003588972",
+      "bloomHash": "QmQVKYzoUS4qk7s8fo1WWQGBBXKiPTzVMcdFZRxdzcMs6A",
       "bloomSize": 131114,
-      "indexHash": "QmfE7iSGRzhbLk3qjLdae1muhsocKAf3ngEGH1QASKfsmE",
-      "indexSize": 2408292
+      "indexHash": "QmVZpfZWQEPQicAiFHAmCvm35nn2VvjugYpC88dhvnzb8Z",
+      "indexSize": 2198012
     },
     {
-      "range": "003590604-003592698",
-      "bloomHash": "QmXiHpS2mAGJvBmqtBJgqZbjZkp4FUxS1yWuYp9VfSBws1",
+      "range": "003588973-003590823",
+      "bloomHash": "QmfGeeczVnk3WgWPxJuSDsrYzWbWMmW2JZg4GnxaN5fj33",
       "bloomSize": 131114,
-      "indexHash": "QmPdQB5zhnHo2DzriKdzyVtF2M9ycLP3XSG1n6PHDgN3dA",
-      "indexSize": 2253664
+      "indexHash": "QmX64viv8j9qyXKQ8BBVzH8GezCsG1qkdotymkRCRixNmh",
+      "indexSize": 2416756
     },
     {
-      "range": "003592699-003594713",
-      "bloomHash": "QmYDMLxWBWtQvtYQjNXPA3nmJYe8pfwjGfvV1hNcAUYNQs",
+      "range": "003590824-003592926",
+      "bloomHash": "QmUpugSvFRPiAMdhU6qCkVRUHR1Toz4FDs2g2pQa8CfbFL",
       "bloomSize": 131114,
-      "indexHash": "QmYwPXpnzZN1ChXpNCne7Cu22X8LY6CB3FVsgfBo85fye2",
-      "indexSize": 2280144
+      "indexHash": "QmVvGEUiBcwqyd1xjLb8hGAmEwAcsY8khmMWxsKrkWsguQ",
+      "indexSize": 2271628
     },
     {
-      "range": "003594714-003596285",
-      "bloomHash": "QmXLZQFQv1Ag3pcDyNRZf524oRtbueU4jvyE3GzMD6ytoL",
+      "range": "003592927-003594899",
+      "bloomHash": "Qme2MTcqxP7W2tMvrKTzpbXkPCHyni8camWiwHQZXtZfuS",
       "bloomSize": 131114,
-      "indexHash": "QmNjABaqTeT3byY71wq8q5EPjeYoGpUKbECMs9gWocb4Rs",
-      "indexSize": 2375788
+      "indexHash": "QmSaHEBGm6BH9bbswCouwBK1oHi16fVxv72RMSyjS3suLv",
+      "indexSize": 2293612
     },
     {
-      "range": "003596286-003598212",
-      "bloomHash": "QmYQWcvg3MSqDWTuaVRibY1XVw4PogGGy7qwm6n5SNpScq",
+      "range": "003594900-003596468",
+      "bloomHash": "QmaRYQpYEQbPGxpjtq2A3BAYMMknmuXJ3kzDxgCf3yNv4T",
       "bloomSize": 131114,
-      "indexHash": "Qmf5kSJD6E3Etw68iosmU1xA2L58R8QCsF75UN5SgBAVCj",
-      "indexSize": 2288648
+      "indexHash": "QmQfTmA7UjmEBBU2aciGJ9sbBD4ZTHEXntjnGNe5XzrbpX",
+      "indexSize": 2329556
     },
     {
-      "range": "003598213-003600000",
-      "bloomHash": "QmcZbuFua3pAY2BssN4yxH5wAC7pNS9Txw2zTZcrxSihG5",
+      "range": "003596469-003598424",
+      "bloomHash": "QmTAZPuCA2mxCNLT48VpzbgLekuD9hCbxZWUdqvKzitb7h",
       "bloomSize": 131114,
-      "indexHash": "QmTbiVCkF3oET6z1nwF648BAHAE3upYTgJkaaooFqsiGhj",
-      "indexSize": 1959536
+      "indexHash": "QmXmcf1nfHU41XUT9qo6ofQmSYEEgwtxDuSrjGLoZYTftC",
+      "indexSize": 2296668
+    },
+    {
+      "range": "003598425-003600000",
+      "bloomHash": "QmcbAVC5SSS78HNDALUxv5WJqbsLRY1FWwjYjqpGUrH8ke",
+      "bloomSize": 131114,
+      "indexHash": "QmaUL2ELBXcVC9bm7KYoXavcXDcUCqaojRouyTkuPbwTcV",
+      "indexSize": 1707936
     },
     {
       "range": "003600001-003601632",
@@ -3124,6 +3131,13 @@
       "bloomSize": 131114,
       "indexHash": "QmUU89jWAQeHZwNFm9oXNSBzkK9saYnHZYoqPUMjxMtK7y",
       "indexSize": 2309280
+    },
+    {
+      "range": "003643943-003644728",
+      "bloomHash": "QmdnDDWaMyAFGQfDdUXtqyYaNaRCaw58WZcULdm7m89c3g",
+      "bloomSize": 131114,
+      "indexHash": "QmYuejvgXqqkRuSgGnAkFYfPb7vW5yigeH1rYWpLkybJPJ",
+      "indexSize": 2583384
     }
   ]
 }
